<resources>
    <string name="app_name">TuLink</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>


    <string name="btn_text_login">Login</string>
    <string name="btn_text_sign_up">Sign Up</string>

    <string name="content_description_app_logo">App Logo</string>
    <string name="content_description_user_profile_picture">Profile Picture</string>

    <string name="menu_tittle_chats">Chats</string>
    <string name="menu_tittle_find_match">Find Match</string>
    <string name="menu_tittle_profile">Profile</string>


    <string name="fragment_label_chats">Chats</string>
    <string name="fragment_label_profile">Profile</string>
    <string name="fragment_label_find_match">Find Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_type_message">Type Message</string>
    <string name="sign_up_label_provide_profile_photo_name">Please Provide your name and an apptional profile photo</string>
    <string name="sign_up_label_provide_profile">Profile Info</string>
    <string name="hint_name">Fullname/ Username</string>
    <string name="btn_text_finish">Finish</string>
    <string name="menu_tittle_notifications">Notifications</string>
    <string name="menu_tittle_links">Links</string>
    <string name="menu_tittle_settings">Settings</string>
    <string name="menu_tittle_log_out">Log Out</string>
    <string name="status_online">online</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
</resources>
