<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:title="@string/menu_tittle_chats"
            android:id="@+id/chatsFragment3"
            android:icon="@drawable/ic_chat"
            />
    <item
            android:title="@string/menu_tittle_find_match"
            android:id="@+id/findMatchFragment3"
            android:icon="@drawable/ic_heart_circle"
            />
    <item
            android:title="@string/menu_tittle_notifications"
            android:id="@+id/notificationFragment2"
            android:icon="@drawable/ic_notifications"
            />

    <item
            android:title="@string/action_profile"
            android:id="@+id/profileSettingFragment"
            android:icon="@drawable/ic_account_circle"
            />

</menu>