<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginFragment">

        <ImageView
                android:contentDescription="@string/content_description_app_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/tu_link_logo_large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:id="@+id/img_logo_login"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/img_logo_login"
                android:layout_marginTop="32dp"
                android:id="@+id/textLayoutUserNameLogin">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_email"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textLayoutUserNameLogin"
                android:id="@+id/textLayoutPassLogin">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_password"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_login"
                app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_sign_up"
                app:layout_constraintVertical_bias="1.0"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_sign_up"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textLayoutPassLogin"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>


