<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       xmlns:tools="http://schemas.android.com/tools"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".fragments.ProfileFragment">

        <TextView
                android:text="@string/sign_up_label_provide_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_sign_up_text_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="24sp"/>

        <TextView
                android:text="@string/sign_up_label_provide_profile_photo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_sign_up_text_profile_setup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_text_profile"
                android:textAlignment="center"
                android:textSize="12sp"/>

        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/img_sign_up_profile_picture"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_text_profile_setup"
                android:src="@drawable/polo_profile"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/textUserNameSignUpProfile"
                app:layout_constraintStart_toEndOf="@+id/img_sign_up_profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_text_profile_setup"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sign_up_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_name"
                    android:textSize="14sp"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_finish_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_finish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
